# KumoFeaturedBot

./: .gitignore  BotController.py  BotGeneral.py  BotMaintance.py  Dockerfile  MIGRATION_GUIDE.md  MODULAR_STRUCTURE.md  README.md  bot_control.py  bot_debug.py  bot_prod.py  bot_setup.py  config.json  example_config.json  pylintrc  pyproject.toml  requirements.txt  secret.json  style.yapf  variables.py  ver.py
.github/workflows/: codeql-analysis.yml  dependency-review.yml  pylint.yml
kumo_bot/: __init__.py  __main__.py  bot.py  debug_bot.py  setup_bot.py
kumo_bot/cogs/: __init__.py  admin.py  events.py  owner.py  utility.py  voting.py
kumo_bot/commands/: __init__.py  voting.py
kumo_bot/config/: __init__.py  constants.py  settings.py
kumo_bot/events/: __init__.py  handlers.py
kumo_bot/utils/: __init__.py  checks.py  downloaders.py  voting.py
